Fix typo docker-image.yml

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,7 +19,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         repository: 'hollance/BlazeFace-PyTorch'
-        path: 'model/bazeface'
+        path: 'model/blazeface'
         
     - name: Build the Docker image
       run: docker build . --file build/Dockerfile --tag the-smile:$(date +%Y%m%d-%s)  --tag the-smile:latest
