--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,12 +27,18 @@ jobs:
     - name: Tar the image
       run: docker save the-smile:latest | gzip > smile_latest.tar.gz
 
-    - name: copy file via ssh key
-      uses: appleboy/scp-action@v0.1.7
-      with:
+    - name: copy image to server
+      run: ssh -i <(echo $key) $user@$host ls -la
+      env:
         host: ${{ secrets.SSH_HOST }}
-        username: ${{ secrets.SSH_USER }}
-        port: 22
+        user: ${{ secrets.SSH_USER }}
         key: ${{ secrets.SSH_KEY }}
-        source: "smile_latest.tar.gz"
-        target: /srv/smile/smile_latest.tar.gz
+    # - name: copy file via ssh key
+    #   uses: appleboy/scp-action@v0.1.7
+    #   with:
+    #     host: ${{ secrets.SSH_HOST }}
+    #     username: ${{ secrets.SSH_USER }}
+    #     port: 22
+    #     key: ${{ secrets.SSH_KEY }}
+    #     source: "smile_latest.tar.gz"
+    #     target: /srv/smile/smile_latest.tar.gz
