--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,6 +34,6 @@ jobs:
       run: docker image tag thesmile:latest registry.digitalocean.com/thesmile/thesmile:latest
 
     - name: Push to DO
-      run: docker image tag thesmile:latest registry.digitalocean.com/thesmile/thesmile:latest
+      run: docker push registry.digitalocean.com/thesmile/thesmile:latest
 
 
