--- a/.github/workflows/base-docker-image.yml
+++ b/.github/workflows/base-docker-image.yml
@@ -28,10 +28,10 @@ jobs:
       run: docker build . --file build/base.Dockerfile --tag thesmile-base:latest
 
     - name: Tag for DO
-      run: docker image tag thesmile-base:latest registry.digitalocean.com/thesmile/thesmile:latest
+      run: docker image tag thesmile-base:latest registry.digitalocean.com/thesmile/thesmile-base:latest
 
     - name: Tag sha for DO
-      run: docker image tag thesmile-base:latest registry.digitalocean.com/thesmile/thesmile:$(echo $GITHUB_SHA | head -c7)
+      run: docker image tag thesmile-base:latest registry.digitalocean.com/thesmile/thesmile-base:$(echo $GITHUB_SHA | head -c7)
 
     - name: Push to DO
       run: docker push registry.digitalocean.com/thesmile/thesmile-base:latest
